Overflow fix

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1144,11 +1144,11 @@ a.accordion-toggle {
 .main-functions-row {
   padding-top: 30px;
   padding-bottom: 30px;
-  margin-bottom: 30px;
+  margin: 0 -10px 30px -10px;
 }
 
 .main-content-row {
-  padding-top: 30px; 
+  padding-top: 30px;
   margin-bottom: 40px;
   line-height: 1.15!important;
   span {
